--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@
 .about-me-contents {
     font-size: 18px;
     color: #eeeeee;
-<<<<<<< HEAD
 }
 
 .experience-contents,
@@ -120,7 +119,7 @@
 }
 
 .exp-time-period,
-.educationp-time-period,
+.education-time-period,
 .awards-time-period {
     font-size: 18px;
 }
@@ -136,6 +135,4 @@
 .awards-desc {
     font-size: 16px;
     padding-left: 5px;
-=======
->>>>>>> 9805d6630490f34f6a7e0fa9905305dc87256927
 }
